Fixed GTK and Motif themes selection